--- a/package.json
+++ b/package.json
@@ -19,19 +19,7 @@
   },
   "dependencies": {
     "async": "^1.4.2",
-    "body-parser": "^1.13.3",
-    "connect-mongo": "^0.8.2",
-    "cookie-parser": "^1.3.5",
-    "express": "^4.13.3",
-    "express-session": "^1.11.3",
-    "glob": "^5.0.14",
-    "method-override": "^2.3.5",
-    "mongojs": "^1.3.0",
-    "nsloader": "^0.1.4",
-    "passport": "^0.3.0",
-    "passport.socketio": "^3.5.1",
-    "socket.io": "^1.3.6",
-    "socket.io-events": "^0.4.6"
+    "nsloader": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^1.2.1",
